syntax = "proto3";
package userservice;

message User {
    string name = 1;
    int32 age = 2;
    string email = 3;
}

message GetUserByAgeRequest {
    int32 age = 1;
}

message GetUserByAgeResponse {
    repeated User users = 1;
}

service UserService {
    rpc GetUserByAge(GetUserByAgeRequest) returns (GetUserByAgeResponse) {}
}
